--- a/themes/ocean/source/css/_partial/article.styl
+++ b/themes/ocean/source/css/_partial/article.styl
@@ -217,5 +217,8 @@ $article-share-link
     background google-color
     text-shadow 0 1px darken(google-color, 20%)
 
-@import "gallery.styl"
-@import "albums.styl"
+
+@import "tocbot"
+@import "gallery"
+@import "albums"
+@import "justifiedGallery"
