--- a/themes/ocean/source/css/_partial/layou.styl
+++ b/themes/ocean/source/css/_partial/layou.styl
@@ -26,6 +26,11 @@
   &.on
     right 0
 
+.sidebar-specter
+  opacity .1
+  &:hover
+    opacity 1
+
 .navbar-toggle
   position absolute
   top gutter-width
