--- a/themes/ocean/source/css/style.styl
+++ b/themes/ocean/source/css/style.styl
@@ -19,6 +19,7 @@ html
   -webkit-tap-highlight-color transparent
 
 body
+  position relative
   background-color body-background
   font-family font-family-base
   font-size font-size-base
