--- a/themes/ocean/layout/_partial/article.ejs
+++ b/themes/ocean/layout/_partial/article.ejs
@@ -1,5 +1,7 @@
-<article id="<%= post.layout %>-<%= post.slug %>" class="article article-type-<%= post.layout %>" itemscope itemprop="blogPost" data-scroll-reveal>
 
+
+<article id="<%= post.layout %>-<%= post.slug %>" class="article article-type-<%= post.layout %>" itemscope itemprop="blogPost" data-scroll-reveal>
+  
   <div class="article-inner">
     <% if (post.link || post.title){ %>
       <header class="article-header">
@@ -14,8 +16,12 @@
       </div>
     <% } %>
 
+    <% if (theme.toc && is_post()){ %>
+      <%- partial('post/tocbot') %>
+    <% } %>
+
     <div class="article-entry" itemprop="articleBody">
-      <%- partial('post/albums') %>
+      <%- partial('post/justifiedGallery') %>
       <%- partial('post/gallery') %>
       <% if (post.excerpt && index){ %>
         <%- post.excerpt %>
